# microdata-datastore-api

./: .gitignore  .pre-commit-config.yaml  .test.env  CODEOWNERS  Dockerfile  README.md  SECURITY.md  backstage.yaml  pyproject.toml  pytest.ini  test.db
.github/: dependabot.yml
.github/workflows/: pr.yaml  publish_public_image.yaml  test-and-build.yaml
datastore_api/: main.py
datastore_api/adapter/: auth.py  datastore.py
datastore_api/adapter/auth/: __init__.py  dependencies.py
datastore_api/adapter/db/: __init__.py  migrations.py  models.py  sqlite.py
datastore_api/adapter/local_storage/: __init__.py  data_directory.py  datastore_directory.py  input_directory.py  metadata_directory.py
datastore_api/api/: __init__.py  datastores.py  importable_datasets.py  languages.py  legacy.py  maintenance_status.py  maintenance_statuses.py  metadata.py  metadata_api.py  observability.py  request_models.py  targets.py
datastore_api/api/common/: dependencies.py
datastore_api/api/data/: __init__.py  models.py
datastore_api/api/datastores/: __init__.py  models.py  setup_datastore.py
datastore_api/api/dependencies/: datastore.py
datastore_api/api/jobs/: __init__.py  models.py
datastore_api/api/metadata/: __init__.py  models.py
datastore_api/common/: exceptions.py  models.py
datastore_api/config/: __init__.py  environment.py  gunicorn.py  logging.py
datastore_api/config/logging/: __init__.py  application.py  gunicorn.py  uvicorn.py
datastore_api/domain/: importable_datasets.py  languages.py  metadata.py
datastore_api/domain/data/: __init__.py  filters.py
datastore_api/domain/datastores/: __init__.py  create_datastore.py  models.py
datastore_api/exceptions/: exceptions.py
doc/: openapi.yaml
migrations/: 20260127_add_deleted_at_to_datastore.sql
tests/: conftest.py
tests/integration/: test_app.py
tests/integration/adapter/: test_input_directory.py  (+3 more)
tests/resources/: test_resources.py
tests/unit/: conftest.py  test_main.py
tests/utils/: util.py
(+65 files in other folders)
