[project]
name = "datastore-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "pytest-mock>=3.14.1",
    "pytest-dotenv>=0.5.2",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
target-version = "py313"


